<resources>
    <string name="app_name">BusinessCard</string>
    <string name="androidLogo">Android Skating logo</string>
    <string name="alwaysInMotion">Always in Motion</string>
    <string name="logoText">Logo texto Android</string>
    <string name="joinUs">Join us!</string>
    <string name="ritaCasiello">Rita Casiello</string>
    <string name="barcelona">Barcelona,  Spain</string>
    <string name="mail">rituzka@gmail.com</string>
    <string name="call">Phone: +34617004968</string>
    <string name="schedule">Customer Service schedule: from 9:00 to 19:00</string>
    <string name="share_image">Share image!</string>
</resources>